# oxide

./: Cargo.toml  README.md  oxide.toml
cli/: Cargo.toml  oxide.toml
cli/src/: main.rs
core/common/: Cargo.toml  oxide.toml
core/common/src/: lib.rs  task.rs
core/common/src/utils/: nsid.rs
core/ipc/: Cargo.toml  oxide.toml
core/ipc/src/: lib.rs  protocol.rs
core/ipc/src/packet/: mod.rs  request.rs  response.rs
core/project/: Cargo.toml  oxide.toml
core/project/src/: lib.rs  utils.rs
daemon/: Cargo.toml  oxide.daemon.json  oxide.toml
daemon/src/: config.rs  lib.rs
homeserver/: Cargo.toml  oxide.toml
integrations/node/: Cargo.toml  oxide.toml
integrations/node/src/: tasks.rs
