[workspace]
resolver = "2"

members = [ "cli", "core/*", "integrations/*", "daemon", "homeserver"]

[workspace.dependencies]
oxide_project = { version = "=0.0.1", path = "core/project" }
oxide_common = { version = "=0.0.1", path = "core/common" }
oxide_ipc = { version = "=0.0.1", path = "core/ipc" }

serde_json = "1.0.108"
structopt = "0.3.26"
serde = "1.0.192"
glob = "0.3.1"
toml = "0.8.14"
